logs/eval_549428.log
Setting up environment...
Starting evaluation run...
  File "evaluate.py", line 90
    print(f"\n--- Running Evaluation ---")
                                        ^
SyntaxError: invalid syntax
